--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
-# Default ignored files
-/shelf/
-/workspace.xml
+../.idea/
+.vscode/
+*.sw*
+*.iml
+
+# The file containing environment variables
+**/venv
+
+# Ignore Logs
+logs.
+*.log
+log*.
+db*
+#  data base
+
+
+# other
+lesson_api/less_1/probe.py
+__pycache__
+Thumbs.db
+.DS_Store
+probe*.py
+example.py
+x*
+
+# config  files
+auth*.py
+probe*
+*.env
+
+config*
+.config*
+
